#
# Test CMake version
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

# The name of the project. (EDIT THIS)
PROJECT(libmsr145)

# Used to resolve absolute path names
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})


# Set executable output dir to build  dir
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

#Wanted to add more error flags, but Image.cpp throw warnings with -pedantic and -Wunused-variable
SET( CMAKE_CXX_FLAGS  "	${CMAKE_CXX_FLAGS}	\
			-std=c++14 		\
		 	-Wall 			\
			-Wextra 		\
			-Wshadow 		\
			-Wpointer-arith 	\
			-ffunction-sections 	\
			-fdata-sections		\
			-Wcast-qual		\
			-Werror			\
			-Wno-unused-variable 	\
			-pedantic		\
			-Wunused-variable	\
" )

set (HEADER_DIR "${ROOT}/headers")
set (HEADER_FILES ${HEADER_DIR}/libmsr145.hpp)
set (HEADER_FILES ${HEADER_FILES} ${HEADER_DIR}/libmsr145_structs.hpp)
set (HEADER_FILES ${HEADER_FILES} ${HEADER_DIR}/libmsr145_enums.hpp)

include_directories(${HEADER_DIR})

add_subdirectory("sources")


