CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

set (LIBMSR145_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (LIBMSR145_HEADERDIR "${LIBMSR145_DIR}/headers")
set (LIBMSR145_HEADERS ${LIBMSR145_HEADERDIR}/libmsr145.hpp)
set (LIBMSR145_HEADERS ${LIBMSR145_HEADERS} ${LIBMSR145_HEADERDIR}/libmsr145_structs.hpp)
set (LIBMSR145_HEADERS ${LIBMSR145_HEADERS} ${LIBMSR145_HEADERDIR}/libmsr145_enums.hpp)

include_directories(${LIBMSR145_HEADERDIR})
add_subdirectory("sources")
